--- a/fe/package.json
+++ b/fe/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "axios": "1.4.0",
-    "clsx": "1.2.1",
+    "clsx": "^1.2.1",
+    "dayjs": "^1.11.19",
     "form-data": "4.0.0",
     "lucide-react": "^0.555.0",
     "mammoth": "^1.11.0",
@@ -18,7 +19,8 @@
     "pdf-parse": "^1.1.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-dropzone": "14.2.3"
+    "react-dropzone": "14.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
