--- a/fe/package.json
+++ b/fe/package.json
@@ -13,6 +13,7 @@
     "clsx": "^1.2.1",
     "dayjs": "^1.11.19",
     "form-data": "4.0.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.555.0",
     "mammoth": "^1.11.0",
     "next": "15.1.9",
